Fix Javadoc generation for non-JPMS project with JDK 11